addresses 189 - Fixed css and added scrollbar to Pending Tasks. Removed console logs

--- a/group3_frontend/src/components/homePage/Homepage.css
+++ b/group3_frontend/src/components/homePage/Homepage.css
@@ -1,7 +1,7 @@
 .HomepageContainer{
     width:100%;
     height:100%;
-    position: absolute;
+    position: relative;
     top:0px;
 }
 
@@ -9,8 +9,9 @@
     position: absolute;
     right: 100px;
     width: 63%;
-    top:20px;
-    background-color: rgba(250,250,250, 1);
+    margin-top:2px;
+    background-color: rgba(210,250,250, 1);
+    height:300px;
 
 
 }
@@ -18,14 +19,13 @@
 
 .UserDataHomepage{
     
-    background-color: rgba(250,250,250, 1);
-    position: absolute;;
+    background-color: rgba(210,250,250, 1);
+    position: absolute;
     text-align: center;
-    left: 1%;
-    margin-top:20px;
-    margin-right:20px;
-    padding-left:20px;
-    width:200px;
+    left: -5px;
+    margin-top:2px;
+    padding-left:5px;
+    width:300px;
     -webkit-animation: bounce-in-top 1.1s both;
     animation: bounce-in-top 1.1s both;
     
@@ -36,18 +36,23 @@
     text-align: left;
 }
 
-.graphContainer{
-    left:50px;
-    margin-top:400px;
-    
-}
+
 
 
 
 .TaskGraphUpperContainer{
-    position: relative;
-    top: 400px;
-}
+        background-color: rgba(210,250,250, 1);
+        margin-right:5px;
+        left: -5px;
+
+    position: absolute;
+    height:300px;
+    padding-bottom: 100px;
+    top: 340px;
+    width: 300px;
+    overflow-y: auto;
+    overflow-x:hidden;
+    }
 
 
 /* ----------------------------------------------
